--- a/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
@@ -21,13 +21,22 @@ footer {
 form.crispy-dynamic-form .controls .radio, form.crispy-dynamic-form .controls .checkbox  {margin:0 0 0 20px;font-weight:400;}
 form.crispy-dynamic-form img {display:block;}
 img.type_icon {display:inline;}
+.jumbotron {background:#eee;}
 .jumbotron .title {font-size: 63px;}
 .jumbotron img.teaser_icon {float:left;margin:0 10px 0 0;border-radius:50%;}
 .teaser_more {margin:20px 0 0;}
 .jumbotron .teaser_more {margin:30px 0 0;}
 .breadcrumb ol.content_types {background:#ccc;position:absolute;list-style:none;padding:0;margin:0;}
 #block_content {overflow:auto;}
-
+.carousel-control.right, .carousel-control.left {background:none;}
+.carousel-control.right, .carousel-control.left {background:none;}
+.carousel-inner {margin:0;}
+.carousel-caption {bottom:0;padding:0;left:0;right:0;background:#000;color:#fff;filter: alpha(opacity=50);opacity: .7;}
+.carousel-caption h2 a {color:#fff;padding:0 10px;}
+.carousel-caption p {padding:0 10px 5px;margin:0;width:100%;font-size:15px;}
+.carousel-inner > .item {background:#fff;}
+.carousel-indicators {background-color: #000;display: block;position:relative;top:5px;}
+.jumbotron .carousel-control {width:0;}
 .default .title {border-bottom:1px solid #999;padding:0 0 10px;}
 #map ul {margin:0;padding:0;list-style:none;}
 #map li {font-weight:700;}
@@ -131,6 +140,41 @@ img.type_icon {display:inline;}
 #sidebar .search-box {padding:3px 0;background:#eee;margin:0;border-radius:4px;}
 #sidebar .search-box .form-control {color:#959595;}
 
+
+.poll-submission .radio,.poll-submission .checkbox {margin-top: 0px;margin-bottom: 0px;}
+.poll-submission label.checkbox, .poll-submission label.radio {margin-left:30px;display:block;font-weight:400;}
+.poll-submission .control-label {}
+.poll-submission input {margin-left:10px;display:block;}
+.poll-submission img {margin-left:10px;display:block;}
+.poll-submission .form-control {width:auto;}
+.poll-submission .panel-footer input {display:inline;}
+.poll-submission .summary {padding:10px;}
+.poll-submission .form-group {padding:0 10px;}
+
+.default .poll-submission.panel h3 {color:#000;font-size:36px;border-bottom: 1px solid #999;padding:0 0 10px;}
+.default .poll-submission.panel {border:none;box-shadow:none;}
+.default .poll-submission.panel-primary > .panel-heading {background:#fff;border:none;padding:0;}
+.default .poll-submission .summary {padding:0;margin:20px 0;}
+.default .poll-submission .form-group {padding:0;}
+.default .poll-submission .panel-footer {background:#fff;border:none;padding:0;}
+
+.detail .alert-info {color:#000;}
+.authors_title {margin-bottom:30px;}
+.detail .categories .btn {text-transform:uppercase;font-size:12px;}
+.detail .categories .btn span {padding-right:10px;}
+
+.user-details .user-image {position: relative;  z-index: 1; width: 100%; text-align: center;}
+ .user-image img { clear: both; margin: auto; position: relative;}
+
+.user-details .user-info-block {width: 100%; position: absolute; top: 55px; background: rgb(255, 255, 255); z-index: 0; padding-top: 35px;}
+ .user-info-block .user-heading {width: 100%; text-align: center; margin: 10px 0 0;}
+ .user-info-block .navigation {float: left; width: 100%; margin: 0; padding: 0; list-style: none; border-bottom: 1px solid #428BCA; border-top: 1px solid #428BCA;}
+  .navigation li {float: left; margin: 0; padding: 0;}
+   .navigation li a {padding: 20px 30px; float: left;}
+   .navigation li.active a {background: #428BCA; color: #fff;}
+ .user-info-block .user-body {float: left; padding: 5%; width: 90%;}
+  .user-body .tab-content > div {float: left; width: 100%;}
+  .user-body .tab-content h4 {width: 100%; margin: 10px 0; color: #333;}
 /*
  * Off Canvas
  * --------------------------------------------------
