Improved view author with link in content teaser

--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -38,7 +38,7 @@
     </div>
 
     {% if not simplified_view %}
-        {% include "cyclope/author_block.html"  %}
+        {% include "cyclope/author_block_teaser.html"  %}
     {% endif %}
 
 
