--- a/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
@@ -92,7 +92,7 @@ img.type_icon {display:inline;}
 .download_link .glyphicon {padding:0 5px 0 0;}
 .default .teaser_icon_container {padding:20px 0;}
 .default .teaser_icon_container p {margin:10px 0;}
-.teaser_icon_container {background:#eee;margin:10px 0;}
+.detail .teaser_icon_container {background:#eee;margin:10px 0;}
 .teaser_icon_container:hover {background:#ccc;}
 .movieclip_picture {background:#fff;padding:10px 0;margin:10px 0;border-top:1px solid #ccc;border-bottom:1px solid #ccc;}
 #bottom img.teaser_icon {border-radius:50%;margin:10px auto;}
@@ -164,7 +164,7 @@ img.type_icon {display:inline;}
 .default .teaser .title {border-bottom:none;}
 .default img.teaser_icon {border-radius: 50%;border:1px solid #ccc;}
 .default .teaser {border-bottom:1px solid #ccc;padding:10px;margin:0 0 20px;}
-.default .teaser_icon_container {background:transparent;padding:0 0 0 50px;margin:0;margin-top:-20px;float:right;}
+.default .teaser .teaser_icon_container {background:transparent;padding:0 0 0 50px;margin:0;margin-top:-20px;float:right;}
 .detail .categories .btn {text-transform:uppercase;font-size:12px;}
 .detail .categories .btn span {padding-right:10px;}
 
