Improved comments with bootstrap style

--- a/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
@@ -43,7 +43,9 @@ img.type_icon {display:inline;}
 #map ul ul {margin:10px 0;}
 #map ul ul ul {margin:0;}
 #map li li {font-weight:400;margin:0 0 0 20px;}
-
+ul.media-list {margin:25px 0 0;}
+ul.media-list ul {margin-left:64px;}
+#user_comments #wrap_write_comment {margin-top:20px;}
 .related_contents ul  {list-style:none !important;padding:0;margin:0;}
 
 .category_add_content span:hover {
