--- a/cyclope/templates/comments/comments_block.html
+++ b/cyclope/templates/comments/comments_block.html
@@ -50,21 +50,24 @@
 
     <div id="user_comments">
       <div class="top comments_length">
-        <h6>{% blocktrans %} There are {{ comment_count }} comments {% endblocktrans %}</h6>
+        <h3 class="title">{% blocktrans %} There are {{ comment_count }} comments {% endblocktrans %}</h3>
       </div>
 
-      {% render_comment_list for current_object %}
 
       <div class="action-content show_comment_form">
-        <a name="comments" href="#comments" id="show_comment_form">{% trans "comment on this content" %}</a>
+        <a name="comments" id="show_comment_form" class="btn btn-primary" role="button" data-toggle="collapse" href="#wrap_write_comment" aria-expanded="false" aria-controls="collapseExample">{% trans "comment on this content" %}</a>
       </div>
 
+
       <div>
-        <div id="wrap_write_comment">
+        <div class="collapse" id="wrap_write_comment">
         <!--form comentario -->
          <div id="form-comment">{% render_comment_form for current_object %}</div>
         </div>
       </div>
+
+      {% render_comment_list for current_object %}
+      
     </div>
    </div>
 {% endif %}
