--- a/cyclope/templates/comments/form.html
+++ b/cyclope/templates/comments/form.html
@@ -19,8 +19,8 @@ $(function(){
   {% endif %}
   {{ form|crispy }}
 
-  <div class="submit action-content submit-comment">
-    <input type="submit" name="post" class="submit" value="{% trans "Post your comment" %}" />
-    <a href="#c0" id="cancel_reply">{% trans "Cancel reply" %}</a>
+  <div class="submit action-content submit-comment ">
+    <input type="submit" name="post" class="btn btn-default btn-sm" value="{% trans "Post your comment" %}" />
+    <a href="#c0" id="cancel_reply" class="btn btn-default btn-sm">{% trans "Cancel reply" %}</a>
   </div>
 </form>
