Improved contact items with bootstrap style

--- a/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
@@ -47,7 +47,12 @@ ul.media-list {margin:25px 0 0;}
 ul.media-list ul {margin-left:64px;}
 #user_comments #wrap_write_comment {margin-top:20px;}
 .related_contents ul  {list-style:none !important;padding:0;margin:0;}
-
+.contact_fields  {margin:0 auto;}
+.contact_fields h3 {text-align:center;font-weight:700;font-size:20px;text-transform:uppercase;border-bottom:1px solid #999;margin:30px 20px 0;}
+.contact_fields p {display:inline-block;padding:3px 10px;margin:5px auto;width:40%;}
+.contact_field {display:block;margin:0 auto;text-align:center;}
+.contact_field .text-right {font-weight:700;}
+.contact_fields small,.contact_fields .btn {margin:20px 0 0;}
 .category_add_content span:hover {
   background-color: #cccccc;
 }
