--- a/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
@@ -28,6 +28,7 @@ img.type_icon {display:inline;}
 .jumbotron .teaser_more {margin:30px 0 0;}
 .breadcrumb ol.content_types {background:#ccc;position:absolute;list-style:none;padding:0;margin:0;}
 #block_content {overflow:auto;}
+.center-block { cursor: pointer; }
 .carousel-control.right, .carousel-control.left {background:none;}
 .carousel-control.right, .carousel-control.left {background:none;}
 .carousel-inner {margin:0;}
