--- a/cyclope/core/collections/templates/collections/categories_navigation_block.html
+++ b/cyclope/core/collections/templates/collections/categories_navigation_block.html
@@ -7,9 +7,9 @@
             {% alias categorization.category as 'category' %}
             {% if category.collection.visible %}
 
-            <a href="{% url category-default category.slug %}" class="btn btn-default" role="button">
+            <a href="{% url category-default category.slug %}" class="btn btn-primary" role="button">
                
-                    {{ category.name }} <span class="glyphicon glyphicon-tags" aria-hidden="true"></span></a>
+                  <span class="glyphicon glyphicon-tags" aria-hidden="true"></span> {{ category.name }} </a>
                
             {% endif %}
         {% endfor %}
