Updated custom css

--- a/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
+++ b/cyclope/media/themes/cyclope-bootstrap/css/cyclope.less
@@ -241,3 +241,15 @@ ul.media-list ul {margin-left:64px;}
     width: 50%; /* 6 columns */
   }
 }
+
+.category_description {overflow:auto;}
+.category_description .image {float:left;border-radius:50%;margin:0 20px 0 0;}
+span.category_title {display:block;font-size:24px;margin:0 0 10px;}
+.category_description .category_title {border-bottom:1px solid #000;}
+.collection_image {background:#eee;margin:0 0 10px;}
+.collection_image img {margin: auto;display:block;padding:20px 0;}
+.collection .title {margin-bottom:0;}
+.category .icon {float:right;border-radius:50%;}
+.teaser {overflow:auto;}
+.feed .feed_teaser {border-bottom:1px dotted #999;}
+.feed .btn {margin:0 0 20px;}
